issues resolved