@@ -5,19 +5,23 @@ import de.babiker.picard.wms.order.OrderEntity;
 import de.babiker.picard.wms.order.dto.CustomerDto;
 import de.babiker.picard.wms.order.dto.OrderDetailDto;
 import de.babiker.picard.wms.order.dto.OrderDto;
+import de.babiker.picard.wms.orderitem.dto.OrderItemDto;
+import de.babiker.picard.wms.product.dto.ProductDto;
 import de.babiker.picard.wms.shipment.dto.ShipmentDetailDto;
+import de.babiker.picard.wms.shipment.repository.ShipmentMapper;
+import lombok.AllArgsConstructor;
 
+import java.util.stream.Collectors;
+
+@AllArgsConstructor
 public class OrderMapper {
-    public static OrderDto toOrderDto(OrderEntity e) {
+    private final ShipmentMapper shipmentMapper;
+
+    public OrderDto toOrderDto(OrderEntity e) {
         return new OrderDto(e.getId(), e.getExternalOrderNumber(),
                 e.getDeliveryAddress());
     }
 
-    public static OrderDetailDto toDetailDto(OrderEntity e) {
-        return new OrderDetailDto(e.getId(), e.getExternalOrderNumber(),
-                e.getStatus(), e.getCustomer(), e.getDeliveryAddress(),
-                e.getPositions(), e.getShipment());
-    }
     public OrderDetailDto toOrderDetail(OrderEntity o) {
         var customer = new CustomerDto(
                 o.getCustomer().getId(),
@@ -32,20 +36,20 @@ public class OrderMapper {
                 o.getDeliveryAddress().getPostalCode(),
                 o.getDeliveryAddress().getCountry()
         );
-        var items = o.getItems().stream().map(i ->
+        var items = o.getPositions().stream().map(i ->
                 new OrderItemDto(
                         i.getId(),
                         new ProductDto(i.getProduct().getId(), i.getProduct().getSku(), i.getProduct().getName(), i.getProduct().getPrice()),
                         i.getQuantity(),
                         i.getUnitPrice(),
                         i.getTotalPrice()
-                )).collect(Collectors.toList());
+                )).toList();
 
         ShipmentDetailDto shipmentDto = null;
         if (o.getShipment() != null) {
-            shipmentDto = toShipmentDetail(o.getShipment());
+            shipmentDto = shipmentMapper.toDetailDto(o.getShipment());
         }
 
-        return new OrderDetailDto(o.getId(), o.getExternalOrderNumber(), customer, address, items, shipmentDto);
+        return new OrderDetailDto(o.getId(), o.getExternalOrderNumber(), o.getStatus().name(), customer, address, items, shipmentDto);
     }
 }
